--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="output.css">
 </head>
 <body>
-    
+    <div class="flex items-center xl:px-10 px-3 py-5">
+        <img src="Group 4194 (1).png" alt="" width="150">
+        <a class="ml-8 xl:ml-[300px]" href="">HOME</a>
+        <a class="ml-2 xl:ml-10" href="">ABOUT</a>
+        <a class="ml-2 xl:ml-10" href="">CONTACT</a>
+        <button class="bg-white hidden xl:block ml-10 xl:ml-[400px] border-[2px] boreder-[#40AD74] py-1 px-3 rounded-[50px]">Cвязаться</button>
+    </div>
+    <div>
+        <img class="w-[97%] xl:ml-5 ml-1 mt-5" src="Frame 4113 (1).png" alt="">
+    </div>
+    <div class="flex flex-col xl:flex-row">
+        <div>
+            <img class="w-[300px] ml-20 mt-10 xl:mt-7 xl:ml-[180px] xl:w-[400px]" src="Rectangle 7.png" alt="">
+        </div>
+        <div class="xl:text-start xl:ml-20 text-center">
+            <h1 class="font-bold text-[50px]"> <span class="text-[#40AD74]">инвестируем<br></span> в знания</h1>
+            <h1 class="text-[15px] w-[500px] mt-2">Фонд основан в 2021 году. Основной целью Фонда является развитие и поддержка общественно полезных проектов и мероприятий, организованных непосредственно Фондом, инициативными группами граждан, коммерческими организациями и общественными объединениями,органами государственной власти и местного самоуправления </h1>
+            <h1 class="text-[15px] w-[500px] mt-5">Фонд осуществляет финансирование развития социальных проектов за счёт средств и имущества Фонда, сформированного на основе добровольных взносов и пожертвований, а также оказывает организационную, консультационную, информационную и иную поддержку.</h1>
+        </div>
+    </div>
+    <div class="flex mt-10 xl:ml-[180px] flex-col xl:flex-row">
+        <div class="text-center xl:text-start">
+            <h1 class="font-bold text-[50px] xl:w-[200px]"> <span class="text-[#40AD74]">Развитие</span> Образование <span class="text-[#40AD74]">Наука</span> </h1>
+            <h1 class="text-[15px] w-[500px] mt-5">Мы поддерживаем социальные и молоджёные инициативы на благо развития страны в целом и регионов.</h1>
+            <h1 class="text-[15px] w-[500px] mt-5">Мы поддерживаем перспективные социальные инициативы.</h1>
+            <h1 class="text-[15px] w-[500px] mt-5">Мы поддерживаем науку, образование, развитие и творчество.</h1>
+            <h1 class="text-[15px] w-[500px] mt-5">Развитие социальных инициатив для нас является приоритетом и фундаментом счастливого будущего. </h1>
+            <h1 class="text-[15px] w-[500px] mt-5">Мы инвестируем в образование, науку, здравоохранение и развитие на благо всего общества и государства.</h1>
+        </div>
+        <div>
+            <img src="Frame 4103.png" alt="">
+        </div>
+    </div>
 </body>
 </html>
