--- a/src/index.html
+++ b/src/index.html
@@ -40,5 +40,24 @@
             <img src="Frame 4103.png" alt="">
         </div>
     </div>
+    <h1 class="font-bold text-[50px] ml-10 xl:ml-[180px]">Галерея</h1>
+    <div class="flex mt-10">
+        <div>
+            <img class="w-[762px] xl:ml-[180px]" src="Frame 51.png" alt="">
+        </div>
+        <div>
+            <img class="w-[300px] ml-2 xl:ml-20" src="Rectangle 5 (8).png" alt="">
+        </div>
+    </div>
+    <div class="flex flex-col mt-10 xl:flex-row">
+        <div>
+            <img class="w-[300px] ml-20 mt-10 xl:mt-7 xl:ml-[180px] xl:w-[400px]" src="Rectangle 7 (1).png" alt="">
+        </div>
+        <div class="xl:text-start xl:ml-20 mt text-center">
+            <h1 class="font-bold text-[50px]"> <span class="text-[#40AD74]">Органы управления<br></span>Фондом</h1>
+            <h1 class="text-[15px] w-[500px] mt-2">Фонд основан в 2021 году. Основной целью Фонда является развитие и поддержка общественно полезных проектов и мероприятий, организованных непосредственно Фондом, инициативными группами граждан, коммерческими организациями и общественными объединениями,органами государственной власти и местного самоуправления </h1>
+            <h1 class="text-[15px] w-[500px] mt-5">Фонд осуществляет финансирование развития социальных проектов за счёт средств и имущества Фонда, сформированного на основе добровольных взносов и пожертвований, а также оказывает организационную, консультационную, информационную и иную поддержку.</h1>
+        </div>
+    </div>
 </body>
 </html>
