--- a/src/ahmad.html
+++ b/src/ahmad.html
@@ -21,5 +21,36 @@
               <div class="absolute lg:top-[400px] top-[90px] text-center lg:text-start left-[50px] lg:left-[100px]">
                 
       </section>
+      <section class="max-width-[1200px] lg:h-[600px] h-[1200px] flex justify-evenly items-center mt-[20px] p-[20px] flex-col lg:flex-row">
+        <div class="lg:w-[600px] w-[100%] text-[#505050]">
+        <h1 class="text-[50px] font-bold text-black">Научный центр <br>сибири</h1>
+        <p class="mt-[20px] ">Летом 2021 года Минобрнауки, Минстрой, Минфин, Минэкономразвития и корпорация ВЭБ.РФ отобрали восемь проектов университетских кампусов мирового уровня, готовых к началу реализации в 2021 году. Среди них — новый кампус Новосибирского госуниверситета, где остро стоит проблема обеспеченности студентов общежитиями. Решение о выделении средств из федерального бюджета на строительство кампуса было принято Председателем Правительства РФ Михаилом Мишустиным в марте 2021 года.</p>
+       <p class="mt-[10px] ">Первая очередь кампуса НГУ реализуется на частные благотворительные средства и предполагает строительство трёх объектов до конца 2023 года:</p>    
+       <p class="mt-[10px] ">· новый учебный корпус</p>     
+       <p class="mt-[10px] ">· досуговый центр физико-математической школы НГУ (СУНЦ НГУ)</p>    
+       <p class="mt-[10px] ">· комплекс общежитий НГУ на 690 мест</p>
+       <p class="mt-[10px]">Вторая очередь строительства предполагаем возведение нового общежития СУНЦ — будет построено до конца 2026 года.</p>
+    </div>
+    <img src="./Rectangle 7.png" alt="">
+      </section>
+      <section class="max-width-[1200px] h-[400px] mt-[40px] p-[20px]">
+        <span class="text-[50px] font-bold lg:pl-[80px]">Кампус НГУ </span> <br>
+        <span class="text-[50px] font-bold lg:pl-[80px] text-[#40AD74]">мирового уровня </span>
+        <div class="flex justify-evenly items-center flex-col lg:flex-row gap-[20px] p-[20px]">
+            <div class="w-[400px]"> 
+                <p>Объём строительства — значительный, это целый комплекс зданий физматшколы и университета, общей площадью 75 тыс. квадратных метров. </p>
+                <p class="mt-[10px]">Согласно проекту, на месте демонтированного общежития 1965-го года постройки и на участке рядом с ним будут построены новые здания, включая комплекс общежитий на 690 мест, досуговый и учебный корпус СУНЦ НГУ — эти два здания будут соединены между собой тёплым подземным переходом. Предполагается также в дальнейшем возведение на месте учебного корпуса бывшего здания центра нового общежития СУНЦ на 690 мест. Через дорогу разместятся корпус поточных аудиторий с проектным центром и научная библиотека. На соседнем участке — исследовательский корпус и учебно-лабораторный корпус института медицины и психологии им. В. Зельмана.</p> 
+                <p class="mt-[10px]">Предполагается, что строительство корпусов будет закончено до конца 2023 года.</p> 
+            </div>
+            <div class="w-[400px]">
+                <img width="100%" src="./Rectangle 11.png" alt="">
+            </div>
+            <div class="w-[400px] flex flex-col items-center">
+                <img class="mt-[20px]" src="./Group 464.png" alt="">
+                <img class="mt-[40px]" src="./Group 483.png" alt="">
+                <img class="mt-[40px]" src="./Group 482.png" alt="">
+            </div>
+        </div>
+        </section>
 </body>
-</html>
+</html>    
