--- a/src/ahmad.html
+++ b/src/ahmad.html
@@ -33,7 +33,7 @@
     </div>
     <img src="./Rectangle 7.png" alt="">
       </section>
-      <section class="max-width-[1200px] h-[400px] mt-[40px] p-[20px]">
+      <section class="max-width-[1200px] h-[800px] mt-[40px] p-[20px]">
         <span class="text-[50px] font-bold lg:pl-[80px]">Кампус НГУ </span> <br>
         <span class="text-[50px] font-bold lg:pl-[80px] text-[#40AD74]">мирового уровня </span>
         <div class="flex justify-evenly items-center flex-col lg:flex-row gap-[20px] p-[20px]">
@@ -52,5 +52,47 @@
             </div>
         </div>
         </section>
+         <section class="max-width-[1200px] lg:h-[570px] h-[800px]">
+          <span class="text-[50px] font-bold lg:pl-[150px] lg:text-start text-center">Для </span><span class="text-[#40AD74] lg:text-start text-center text-[50px] font-bold">прессы и сми</span>
+          <div class="flex justify-evenly items-center mt-[40px] flex-col lg:flex-row gap-[30px]">
+            <div class="lg:w-[500px] w-[100%] ">
+           <div class="w-[380px] flex items-center gap-[20px]">
+             <img class="w-[80px]" src="./Bank (3).png" alt="">
+             <div>
+               <p>Трошин Александр Сергеевич</p>
+               <h1 class="text-[30px] font-bold">astroshin@fperspective.ru</h1>
+              </div>
+           </div>
+           <div class="w-[400px] mt-[30px] flex items-center gap-[20px]">
+             <img class="w-[80px]" src="./Bank (4).png" alt="">
+             <div>
+               <p class="text-[30px] font-bold">г. Москва, </p>
+               <h1 class="text-[30px] font-bold">ул. Тестовская 10</h1>
+              </div>
+           </div>
+           <div class="w-[400px] mt-[30px] flex items-center gap-[20px]">
+             <img class="w-[80px]" src="./Bank (5).png" alt="">
+             <div>
+               <p class="text-[20px] ">Телефон</p>
+               <h1 class="text-[30px] font-bold">8-903-740-20-52</h1>
+              </div>
+           </div>
+            </div>
+            <img class="w-[600px]" src="./Rectangle 5 (4).png" alt="">
+          </div>
+      </section>
+       <footer class="max-width-[1200px] h-[300px] bg-[#F8F8F8]">
+               <img class="m-auto pt-[30px]" src="./logo full (2).png" alt="">
+               <div class="mt-[30px] flex justify-evenly flex-col lg:flex-row text-[20px] text-center lg:text-start gap-[10px]">
+                <p>О фонде</p>
+                <p>Миссия</p>
+                <p>Проекты</p>
+                <p>Партнеры</p>
+                <p>Новости</p>
+                <p>Контакты</p>
+                <p>Нормативные документы</p>
+              </div>
+              <p class="text-[#C4C4C4] text-center mt-[30px]">© 2022 ФРСП Перспектива. Все права защищены</p>
+            </footer>
 </body>
 </html>    
