first section done by mainpage

--- a/src/mainpage.html
+++ b/src/mainpage.html
@@ -20,8 +20,14 @@
             <button
                 class="hidden lg:block py-[10px] px-[40px] border-[2px] border-solid border-[#40AD74] rounded-[30px] uppercase font-[700]">Cвязаться</button>
             <img class="w-[40px] lg:hidden" src="./Images/Group 8 (1).png" alt="">
-            
         </nav>
+
+        <section
+            class="section1 lg:max-w-[1500px] lg:m-auto bg-[linear-gradient(to_bottom,rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url(./Images/Rectangle6.png)] w-[100%] h-[700px] lg:bg-center bg-no-repeat bg-[30%] lg:bg-cover rounded-[30px] flex items-start flex-col">
+            <h1
+                class="text-[green] lg:text-white text-[45px] p-[30px] lg:pt-[150px] lg:pl-[150px] leading-[80px] lg:text-[64px] font-[700]">
+                ФОНД РАЗВИТИЯ <br> СОЦИАЛЬНЫХ ПРОЕКТОВ <br> <span class="text-[#40AD74]">“ПЕРСПЕКТИВА”</span></h1>
+        </section>
     </header>
 </body>
 
