third section done by mainpage

--- a/src/mainpage.html
+++ b/src/mainpage.html
@@ -71,7 +71,30 @@
                 </aside>
                 <img class="lg:w-[50%]" src="./Images/Rectangle 6 (1).png" alt="">
             </article>
-            
+        </section>
+
+        <section class="section3 p-[20px] lg:max-w-[1300px] lg:w-[90%] lg:m-auto flex flex-col items-start gap-[20px] lg:gap-[40px]">
+            <p class="text-[#C4C4C4] text-[20px]">МИССИЯ</p>
+            <div class="flex items-center gap-[30px]">
+                <img class="self-start w-[20px] lg:w-[100px]" src="./Images/“.png" alt="">
+                <h3 class="text-[20px] lg:text-[32px] font-[300] text-center lg:text-start">Нашей миссией является поддержка развития образования и науки, молодёжи и студенчества, продвижение
+                    здорового образа жизни, а также содействие развитию и росту регионов России</h3>
+                <img class="self-end w-[20px] lg:w-[100px]" src="./Images/“ (1).png" alt="">
+            </div>
+            <div class="flex flex-col items-center gap-[10px] self-center">
+                <p class="text-[#505050]">Председатель Фонда</p>
+                <h3 class="text-[24px] font-[600]">Клюева Жанна Игоревна</h3>
+                <div class="flex items-center gap-[20px]">
+                    <div class="flex items-center gap-[5px]">
+                        <img src="./Images/Unknown phone.png" alt="">
+                        <p>8-495-984-43-01</p>
+                    </div>
+                    <div class="flex items-center gap-[5px]">
+                        <img src="./Images/Message.png" alt="">
+                        <p>fond@fperspective.ru</p>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 </body>
