fourth section done by mainpage

--- a/src/mainpage.html
+++ b/src/mainpage.html
@@ -73,11 +73,13 @@
             </article>
         </section>
 
-        <section class="section3 p-[20px] lg:max-w-[1300px] lg:w-[90%] lg:m-auto flex flex-col items-start gap-[20px] lg:gap-[40px]">
+        <section
+            class="section3 p-[20px] lg:max-w-[1300px] lg:w-[90%] lg:m-auto flex flex-col items-start gap-[20px] lg:gap-[40px]">
             <p class="text-[#C4C4C4] text-[20px]">МИССИЯ</p>
             <div class="flex items-center gap-[30px]">
                 <img class="self-start w-[20px] lg:w-[100px]" src="./Images/“.png" alt="">
-                <h3 class="text-[20px] lg:text-[32px] font-[300] text-center lg:text-start">Нашей миссией является поддержка развития образования и науки, молодёжи и студенчества, продвижение
+                <h3 class="text-[20px] lg:text-[32px] font-[300] text-center lg:text-start">Нашей миссией является
+                    поддержка развития образования и науки, молодёжи и студенчества, продвижение
                     здорового образа жизни, а также содействие развитию и росту регионов России</h3>
                 <img class="self-end w-[20px] lg:w-[100px]" src="./Images/“ (1).png" alt="">
             </div>
@@ -94,8 +96,39 @@
                         <p>fond@fperspective.ru</p>
                     </div>
                 </div>
-                
             </div>
+        </section>
+
+        <section class="section4 p-[20px] lg:max-w-[1300px] lg:w-[90%] lg:m-auto flex items-center lg:items-start text-center lg:text-start flex-col gap-[40px] lg:py-[100px]">
+            <p class="text-[#C4C4C4] text-[20px]">ОСНОВНОЙ ПРОЕКТ</p>
+            <h1 class="text-[30px] lg:text-[50px] font-[700] uppercase "><span class="text-[#40AD74]">Инвестируем
+                </span> в науку <br>
+                и образование <span class="text-[#40AD74]"> -будущее страны</span>
+            </h1>
+            <div class="flex items-center justify-between lg:gap-[630px] flex-col lg:flex-row text-center lg:text-start gap-[10px]">
+                <p>Основной целью Фонда является развитие и поддержка общественно <br> полезных проектов и мероприятий,
+                    организованных <br> непосредственно Фондом и инициативными группами граждан</p>
+                <div class="flex items-center gap-[10px]">
+                    <img src="./Images/Group 57 (1).png" alt="">
+                    <img src="./Images/ArrowRight (1).png" alt="">
+                </div>
+            </div>
+            <img src="./Images/Rectangle 5 (12).png" alt="">
+            <div class="flex items-center justify-between lg:w-[100%] text-center flex-col lg:flex-row gap-[20px]">
+                <div class="flex flex-col items-center gap-[10px]">
+                    <img src="./Images/Fingerprint recognition.png" alt="">
+                    <h2 class="text-[28px] font-[700]">Новейшие технологии</h2>
+                </div>
+                <div class="flex flex-col items-center gap-[10px]">
+                    <img src="./Images/Bank (3).png" alt="">
+                    <h2 class="text-[28px] font-[700]">Современная <br> инфраструктура</h2>
+                </div>
+                <div class="flex flex-col items-center gap-[10px]">
+                    <img src="./Images/Armchair.png" alt="">
+                    <h2 class="text-[28px] font-[700]">Удобный кампус</h2>
+                </div>
+            </div>
+            <button class="text-[18px] text-white bg-[#40AD74] py-[15px] lg:ml-[85px] px-[70px] self-center rounded-[10px]">ПОДРОБНЕЕ</button>
         </section>
     </main>
 </body>
