--- a/src/mainpage.html
+++ b/src/mainpage.html
@@ -99,13 +99,15 @@
             </div>
         </section>
 
-        <section class="section4 p-[20px] lg:max-w-[1300px] lg:w-[90%] lg:m-auto flex items-center lg:items-start text-center lg:text-start flex-col gap-[40px] lg:py-[100px]">
+        <section
+            class="section4 p-[20px] lg:max-w-[1300px] lg:w-[90%] lg:m-auto flex items-center lg:items-start text-center lg:text-start flex-col gap-[40px] lg:py-[100px]">
             <p class="text-[#C4C4C4] text-[20px]">ОСНОВНОЙ ПРОЕКТ</p>
             <h1 class="text-[30px] lg:text-[50px] font-[700] uppercase "><span class="text-[#40AD74]">Инвестируем
                 </span> в науку <br>
                 и образование <span class="text-[#40AD74]"> -будущее страны</span>
             </h1>
-            <div class="flex items-center justify-between lg:gap-[630px] flex-col lg:flex-row text-center lg:text-start gap-[10px]">
+            <div
+                class="flex items-center justify-between lg:gap-[630px] flex-col lg:flex-row text-center lg:text-start gap-[10px]">
                 <p>Основной целью Фонда является развитие и поддержка общественно <br> полезных проектов и мероприятий,
                     организованных <br> непосредственно Фондом и инициативными группами граждан</p>
                 <div class="flex items-center gap-[10px]">
@@ -128,7 +130,33 @@
                     <h2 class="text-[28px] font-[700]">Удобный кампус</h2>
                 </div>
             </div>
-            <button class="text-[18px] text-white bg-[#40AD74] py-[15px] lg:ml-[85px] px-[70px] self-center rounded-[10px]">ПОДРОБНЕЕ</button>
+            <button
+                class="text-[18px] text-white bg-[#40AD74] py-[15px] lg:ml-[85px] px-[70px] self-center rounded-[10px]">ПОДРОБНЕЕ</button>
+        </section>
+
+        <section
+            class="section5 p-[20px] lg:max-w-[1300px] lg:w-[90%] lg:m-auto flex items-center flex-col gap-[20px] lg:items-start">
+            <p class="text-[#C4C4C4] text-[20px]">Новости</p>
+            <h1 class="text-[30px] lg:text-[50px] font-[700] uppercase "><span class="text-[#40AD74]">ИНТЕРЕСНЫЕ 
+                </span> <br> СОБЫТИЯ </h1>
+            <article class="flex flex-col items-center gap-[30px] lg:flex-row lg:items-start">
+                <div class="flex flex-col items-start gap-[20px] lg:w-[31%]">
+                    <img src="./Images/Frame 4121.png" alt="">
+                    <span class="py-[3px] px-[7px] rounded-[30px] bg-[#40AD74] text-white font-[500]">Июнь 2021</span>
+                    <h3 class="text-[26px] font-[700]">Основание Фонда Перспектива</h3>
+                </div>
+                <div class="flex flex-col items-start gap-[20px] lg:w-[31%]">
+                    <img src="./Images/Rectangle 28 (2).png" alt="">
+                    <span class="py-[3px] px-[7px] rounded-[30px] bg-[#40AD74] text-white font-[500]">11.02.2022</span>
+                    <h3 class="text-[26px] font-[700]">Положительное заключение государственной экспертизы №
+                        54-1-1-3-007790-2022</h3>
+                </div>
+                <div class="flex flex-col items-start gap-[20px] lg:w-[31%]">
+                    <img src="./Images/Rectangle 28 (3).png" alt="">
+                    <span class="py-[3px] px-[7px] rounded-[30px] bg-[#40AD74] text-white font-[500]">16.02.2022</span>
+                    <h3 class="text-[26px] font-[700]">Разрешение <br> на строительство  № 54- <br> Ru54303000–15–2022</h3>
+                </div>
+            </article>
         </section>
     </main>
 </body>
