sixth section done by mainpage

--- a/src/mainpage.html
+++ b/src/mainpage.html
@@ -158,6 +158,17 @@
                 </div>
             </article>
         </section>
+
+        <section
+            class="section6 p-[20px] lg:max-w-[1300px] lg:w-[90%] lg:m-auto flex items-center flex-col gap-[20px] lg:items-start lg:py-[100px]">
+            <p class="text-[#C4C4C4] text-[20px]">Партнёры</p>
+            <h1 class="text-[30px] lg:text-[50px] font-[700] uppercase text-center lg:text-start"> МЫ РАБОТАЕМ <span class="text-[#40AD74]">С ЛУЧШИМИ 
+                </span> </h1>
+            <article class="flex flex-col items-center gap-[30px] lg:flex-row lg:items-start w-[100%] lg:justify-between">
+                <img class="lg:w-[48%]" src="./Images/Frame 81.png" alt="">
+                <img class="lg:w-[48%]" src="./Images/Frame 82.png" alt="">
+            </article>
+        </section>
     </main>
 </body>
 
