seventh section done by mainpage

--- a/src/mainpage.html
+++ b/src/mainpage.html
@@ -169,6 +169,40 @@
                 <img class="lg:w-[48%]" src="./Images/Frame 82.png" alt="">
             </article>
         </section>
+
+        <section
+            class="section3 p-[20px] lg:max-w-[1300px] lg:w-[90%] lg:m-auto flex flex-col items-center lg:items-start gap-[20px]">
+            <p class="text-[#C4C4C4] text-[20px]">KОНТАКТЫ</p>
+            <h1 class="text-[30px] lg:text-[50px] font-[700] uppercase ">Для <span class="text-[#40AD74]">прессы и
+                    СМИ</span></h1>
+            <article class="flex flex-col items-start gap-[20px] lg:flex-row lg:items-center lg:justify-between">
+                <aside class="flex flex-col items-start gap-[20px] lg:w-[50%]">
+                    <div class="flex items-center gap-[20px] lg:gap-[40px]">
+                        <img class="w-[60px] lg:w-[90px]" src="./Images/Bank (4).png" alt="">
+                        <div class="flex flex-col gap-[5px]">
+                            <p class="text-[#505050]">Трошин Александр Сергеевич</p>
+                            <h3 class="font-[700] text-[22px]">astroshin@fperspective.ru</h3>
+                        </div>
+                    </div>
+                    <div class="flex items-center gap-[20px] lg:gap-[40px]">
+                        <img class="w-[60px] lg:w-[90px]" src="./Images/Bank (5).png" alt="">
+                        <div class="flex flex-col gap-[5px]">
+                            <p class="text-[#505050]">Адрес</p>
+                            <h3 class="font-[700] text-[22px]">г. Москва, <br>
+                                ул. Тестовская 10</h3>
+                        </div>
+                    </div>
+                    <div class="flex items-center gap-[20px] lg:gap-[40px]">
+                        <img class="w-[60px] lg:w-[90px]" src="./Images/Bank (6).png" alt="">
+                        <div class="flex flex-col gap-[5px]">
+                            <p class="text-[#505050]">Телефон</p>
+                            <h3 class="font-[700] text-[22px]">8-903-740-20-52</h3>
+                        </div>
+                    </div>
+                </aside>
+                <img class="lg:w-[50%]" src="./Images/Rectangle 5 (13).png" alt="">
+            </article>
+        </section>
     </main>
 </body>
 
