footer done and the mainpage finished

--- a/src/mainpage.html
+++ b/src/mainpage.html
@@ -137,7 +137,7 @@
         <section
             class="section5 p-[20px] lg:max-w-[1300px] lg:w-[90%] lg:m-auto flex items-center flex-col gap-[20px] lg:items-start">
             <p class="text-[#C4C4C4] text-[20px]">Новости</p>
-            <h1 class="text-[30px] lg:text-[50px] font-[700] uppercase "><span class="text-[#40AD74]">ИНТЕРЕСНЫЕ 
+            <h1 class="text-[30px] lg:text-[50px] font-[700] uppercase "><span class="text-[#40AD74]">ИНТЕРЕСНЫЕ
                 </span> <br> СОБЫТИЯ </h1>
             <article class="flex flex-col items-center gap-[30px] lg:flex-row lg:items-start">
                 <div class="flex flex-col items-start gap-[20px] lg:w-[31%]">
@@ -154,7 +154,8 @@
                 <div class="flex flex-col items-start gap-[20px] lg:w-[31%]">
                     <img src="./Images/Rectangle 28 (3).png" alt="">
                     <span class="py-[3px] px-[7px] rounded-[30px] bg-[#40AD74] text-white font-[500]">16.02.2022</span>
-                    <h3 class="text-[26px] font-[700]">Разрешение <br> на строительство  № 54- <br> Ru54303000–15–2022</h3>
+                    <h3 class="text-[26px] font-[700]">Разрешение <br> на строительство № 54- <br> Ru54303000–15–2022
+                    </h3>
                 </div>
             </article>
         </section>
@@ -162,9 +163,11 @@
         <section
             class="section6 p-[20px] lg:max-w-[1300px] lg:w-[90%] lg:m-auto flex items-center flex-col gap-[20px] lg:items-start lg:py-[100px]">
             <p class="text-[#C4C4C4] text-[20px]">Партнёры</p>
-            <h1 class="text-[30px] lg:text-[50px] font-[700] uppercase text-center lg:text-start"> МЫ РАБОТАЕМ <span class="text-[#40AD74]">С ЛУЧШИМИ 
+            <h1 class="text-[30px] lg:text-[50px] font-[700] uppercase text-center lg:text-start"> МЫ РАБОТАЕМ <span
+                    class="text-[#40AD74]">С ЛУЧШИМИ
                 </span> </h1>
-            <article class="flex flex-col items-center gap-[30px] lg:flex-row lg:items-start w-[100%] lg:justify-between">
+            <article
+                class="flex flex-col items-center gap-[30px] lg:flex-row lg:items-start w-[100%] lg:justify-between">
                 <img class="lg:w-[48%]" src="./Images/Frame 81.png" alt="">
                 <img class="lg:w-[48%]" src="./Images/Frame 82.png" alt="">
             </article>
@@ -204,6 +207,24 @@
             </article>
         </section>
     </main>
+
+    <footer class="bg-[#F8F8F8] py-[20px]">
+        <div class="p-[20px] lg:max-w-[1300px] lg:w-[90%] lg:m-auto flex flex-col text-center items-center gap-[20px]">
+            <img src="./Images/Group 4194 (1).png" alt="">
+            <ul
+                class="teext-[#505050] text-[20px] font-[400] flex flex-col items-center gap-[5px] lg:flex-row lg:justify-between lg:gap-[85px]">
+                <li>О фонде</li>
+                <li>Миссия</li>
+                <li>Проекты</li>
+                <li>Партнеры</li>
+                <li>Новости</li>
+                <li>Контакты</li>
+                <li>Нормативные документы</li>
+            </ul>
+            <p class="text-[20px] text-[#C4C4C4] pt-[20px] lg:w-[100%] border-t-[2px] border-solid border-[#505050]">©
+                2022 ФРСП Перспектива. Все права защищены</p>
+        </div>
+    </footer>
 </body>
 
 </html>
